parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AS
    ASSERT
    ASYNC
    AWAIT
    BASE
    BREAK
    CASE
    CATCH
    CLASS
    COMMENT
    CONST
    CONTINUE
    COVARIANT
    DEFAULT
    DEFERRED
    DO
    DOLLAR
    DYNAMIC
    ELSE
    ENUM
    EQUALS
    EXPORT
    EXTENDS
    EXTENSION
    EXTERNAL
    FACTORY
    FINAL
    FINALLY
    FOR
    FUNCTION
    GET
    HIDE
    IF
    IF_NULL
    IMPLEMENTS
    IN
    INTERFACE
    IS
    LATE
    LBRACKET
    LESS_EQUAL
    LESS_THAN
    LIBRARY
    MIXIN
    MORE_EQUAL
    MORE_THAN
    MULTILINE_COMMENT
    NOT_EQUAL
    NULL
    OF
    ON
    OPERATOR
    PART
    RBRACKET
    REQUIRED
    RETHROW
    RETURN
    SEALED
    SET
    SHOW
    STATIC
    SUPER
    SWITCH
    SYNC
    THIS
    THROW
    TRY
    TYPE
    TYPEDEF
    VOID
    WHEN
    WHILE
    WITH
    YIELD

Grammar

Rule 0     S' -> body
Rule 1     body -> instruction SEMICOLON body
Rule 2     body -> instruction SEMICOLON
Rule 3     body -> functionDeclaration body
Rule 4     body -> functionDeclaration
Rule 5     import -> IMPORT STRING
Rule 6     instruction -> functionCall
Rule 7     instruction -> variableDeclarationUninitialized
Rule 8     instruction -> variableDeclarationInitialized
Rule 9     instruction -> variableMutation
Rule 10    instruction -> import
Rule 11    non_nullable_datatype -> INT_TYPE
Rule 12    non_nullable_datatype -> DOUBLE_TYPE
Rule 13    non_nullable_datatype -> NUM_TYPE
Rule 14    non_nullable_datatype -> BOOL_TYPE
Rule 15    non_nullable_datatype -> STRING_TYPE
Rule 16    non_nullable_datatype -> LIST_TYPE
Rule 17    non_nullable_datatype -> MAP_TYPE
Rule 18    non_nullable_datatype -> SET_TYPE
Rule 19    non_nullable_datatype -> RUNES_TYPE
Rule 20    non_nullable_datatype -> SYMBOL_TYPE
Rule 21    non_nullable_datatype -> VAR_TYPE
Rule 22    nullable_datatype -> non_nullable_datatype ACCEPT_NULL
Rule 23    datatype -> nullable_datatype
Rule 24    datatype -> non_nullable_datatype
Rule 25    datatype -> recordTypes
Rule 26    variableDeclarationUninitialized -> datatype VARIABLE
Rule 27    variableInitialization -> ASSIGN value
Rule 28    variableInitialization -> ASSIGN functionCall
Rule 29    variableDeclarationInitialized -> variableDeclarationUninitialized variableInitialization
Rule 30    immediateAssign -> SUM_ASSIGN
Rule 31    immediateAssign -> SUB_ASSIGN
Rule 32    immediateAssign -> MUL_ASSIGN
Rule 33    immediateAssign -> DIV_ASSIGN
Rule 34    immediateAssign -> MOD_ASSIGN
Rule 35    immediateAssign -> AND_ASSIGN
Rule 36    immediateAssign -> OR_ASSIGN
Rule 37    immediateAssign -> XOR_ASSIGN
Rule 38    immediateAssign -> LSHIFT_ASSIGN
Rule 39    immediateAssign -> RSHIFT_ASSIGN
Rule 40    immediateAssign -> RUNSIGNED_SHIFT_ASSIGN
Rule 41    variableMutation -> VARIABLE variableInitialization
Rule 42    variableMutation -> VARIABLE immediateAssign value
Rule 43    functionCall -> prototype
Rule 44    functionCall -> VARIABLE DOT prototype
Rule 45    functionDeclaration -> datatype FUNC_START parameters RPAREN LBRACE body RBRACE
Rule 46    parameters -> datatype VARIABLE COMMA parameters
Rule 47    parameters -> datatype VARIABLE
Rule 48    values -> value COMMA values
Rule 49    values -> value
Rule 50    prototype -> FUNC_START values RPAREN
Rule 51    prototype -> FUNC_START RPAREN
Rule 52    object -> NEW prototype
Rule 53    boolean -> TRUE
Rule 54    boolean -> FALSE
Rule 55    number -> INTEGER
Rule 56    number -> DOUBLE
Rule 57    arithmeticOperator -> PLUS
Rule 58    arithmeticOperator -> MINUS
Rule 59    arithmeticOperator -> TIMES
Rule 60    arithmeticOperator -> DIVIDE
Rule 61    arithmeticOperator -> MOD
Rule 62    logicOperator -> LOGICAL_AND
Rule 63    logicOperator -> LOGICAL_OR
Rule 64    bitwiseOperator -> BITWISE_AND
Rule 65    bitwiseOperator -> BITWISE_OR
Rule 66    bitwiseOperator -> BITWISE_XOR
Rule 67    value -> number
Rule 68    value -> MINUS number
Rule 69    value -> object
Rule 70    value -> arithmeticExpression
Rule 71    value -> MINUS LPAREN arithmeticExpression RPAREN
Rule 72    value -> bitwiseExpression
Rule 73    value -> MINUS LPAREN bitwiseExpression RPAREN
Rule 74    value -> logicExpression
Rule 75    value -> NOT LPAREN logicExpression RPAREN
Rule 76    value -> STRING
Rule 77    value -> VARIABLE
Rule 78    value -> NOT VARIABLE
Rule 79    value -> boolean
Rule 80    value -> NOT boolean
Rule 81    value -> variableValuePair
Rule 82    value -> tuple
Rule 83    logicExpression -> value logicOperator value
Rule 84    logicExpression -> LPAREN value logicOperator value RPAREN
Rule 85    arithmeticExpression -> value arithmeticOperator value
Rule 86    arithmeticExpression -> LPAREN value arithmeticOperator value RPAREN
Rule 87    bitwiseExpression -> value bitwiseOperator value
Rule 88    bitwiseExpression -> LPAREN value bitwiseOperator value RPAREN
Rule 89    recordTypes -> LPAREN multipleDatatypes RPAREN
Rule 90    recordTypes -> LPAREN parameters RPAREN
Rule 91    recordTypes -> LPAREN LBRACE recordTypeAnnotation RBRACE RPAREN
Rule 92    recordTypeAnnotation -> datatype VARIABLE COMMA recordTypeAnnotation
Rule 93    recordTypeAnnotation -> datatype VARIABLE
Rule 94    multipleDatatypes -> datatype COMMA multipleDatatypes
Rule 95    multipleDatatypes -> datatype
Rule 96    variableValuePair -> VARIABLE COLON value
Rule 97    tuple -> LPAREN values RPAREN

Terminals, with rules where they appear

ABSTRACT             : 
ACCEPT_NULL          : 22
AND_ASSIGN           : 35
AS                   : 
ASSERT               : 
ASSIGN               : 27 28
ASYNC                : 
AWAIT                : 
BASE                 : 
BITWISE_AND          : 64
BITWISE_OR           : 65
BITWISE_XOR          : 66
BOOL_TYPE            : 14
BREAK                : 
CASE                 : 
CATCH                : 
CLASS                : 
COLON                : 96
COMMA                : 46 48 92 94
COMMENT              : 
CONST                : 
CONTINUE             : 
COVARIANT            : 
DEFAULT              : 
DEFERRED             : 
DIVIDE               : 60
DIV_ASSIGN           : 33
DO                   : 
DOLLAR               : 
DOT                  : 44
DOUBLE               : 56
DOUBLE_TYPE          : 12
DYNAMIC              : 
ELSE                 : 
ENUM                 : 
EQUALS               : 
EXPORT               : 
EXTENDS              : 
EXTENSION            : 
EXTERNAL             : 
FACTORY              : 
FALSE                : 54
FINAL                : 
FINALLY              : 
FOR                  : 
FUNCTION             : 
FUNC_START           : 45 50 51
GET                  : 
HIDE                 : 
IF                   : 
IF_NULL              : 
IMPLEMENTS           : 
IMPORT               : 5
IN                   : 
INTEGER              : 55
INTERFACE            : 
INT_TYPE             : 11
IS                   : 
LATE                 : 
LBRACE               : 45 91
LBRACKET             : 
LESS_EQUAL           : 
LESS_THAN            : 
LIBRARY              : 
LIST_TYPE            : 16
LOGICAL_AND          : 62
LOGICAL_OR           : 63
LPAREN               : 71 73 75 84 86 88 89 90 91 97
LSHIFT_ASSIGN        : 38
MAP_TYPE             : 17
MINUS                : 58 68 71 73
MIXIN                : 
MOD                  : 61
MOD_ASSIGN           : 34
MORE_EQUAL           : 
MORE_THAN            : 
MULTILINE_COMMENT    : 
MUL_ASSIGN           : 32
NEW                  : 52
NOT                  : 75 78 80
NOT_EQUAL            : 
NULL                 : 
NUM_TYPE             : 13
OF                   : 
ON                   : 
OPERATOR             : 
OR_ASSIGN            : 36
PART                 : 
PLUS                 : 57
RBRACE               : 45 91
RBRACKET             : 
REQUIRED             : 
RETHROW              : 
RETURN               : 
RPAREN               : 45 50 51 71 73 75 84 86 88 89 90 91 97
RSHIFT_ASSIGN        : 39
RUNES_TYPE           : 19
RUNSIGNED_SHIFT_ASSIGN : 40
SEALED               : 
SEMICOLON            : 1 2
SET                  : 
SET_TYPE             : 18
SHOW                 : 
STATIC               : 
STRING               : 5 76
STRING_TYPE          : 15
SUB_ASSIGN           : 31
SUM_ASSIGN           : 30
SUPER                : 
SWITCH               : 
SYMBOL_TYPE          : 20
SYNC                 : 
THIS                 : 
THROW                : 
TIMES                : 59
TRUE                 : 53
TRY                  : 
TYPE                 : 
TYPEDEF              : 
VARIABLE             : 26 41 42 44 46 47 77 78 92 93 96
VAR_TYPE             : 21
VOID                 : 
WHEN                 : 
WHILE                : 
WITH                 : 
XOR_ASSIGN           : 37
YIELD                : 
error                : 

Nonterminals, with rules where they appear

arithmeticExpression : 70 71
arithmeticOperator   : 85 86
bitwiseExpression    : 72 73
bitwiseOperator      : 87 88
body                 : 1 3 45 0
boolean              : 79 80
datatype             : 26 45 46 47 92 93 94 95
functionCall         : 6 28
functionDeclaration  : 3 4
immediateAssign      : 42
import               : 10
instruction          : 1 2
logicExpression      : 74 75
logicOperator        : 83 84
multipleDatatypes    : 89 94
non_nullable_datatype : 22 24
nullable_datatype    : 23
number               : 67 68
object               : 69
parameters           : 45 46 90
prototype            : 43 44 52
recordTypeAnnotation : 91 92
recordTypes          : 25
tuple                : 82
value                : 27 42 48 49 83 83 84 84 85 85 86 86 87 87 88 88 96
values               : 48 50 97
variableDeclarationInitialized : 8
variableDeclarationUninitialized : 7 29
variableInitialization : 29 41
variableMutation     : 9
variableValuePair    : 81

Parsing method: LALR

state 0

    (0) S' -> . body
    (1) body -> . instruction SEMICOLON body
    (2) body -> . instruction SEMICOLON
    (3) body -> . functionDeclaration body
    (4) body -> . functionDeclaration
    (6) instruction -> . functionCall
    (7) instruction -> . variableDeclarationUninitialized
    (8) instruction -> . variableDeclarationInitialized
    (9) instruction -> . variableMutation
    (10) instruction -> . import
    (45) functionDeclaration -> . datatype FUNC_START parameters RPAREN LBRACE body RBRACE
    (43) functionCall -> . prototype
    (44) functionCall -> . VARIABLE DOT prototype
    (26) variableDeclarationUninitialized -> . datatype VARIABLE
    (29) variableDeclarationInitialized -> . variableDeclarationUninitialized variableInitialization
    (41) variableMutation -> . VARIABLE variableInitialization
    (42) variableMutation -> . VARIABLE immediateAssign value
    (5) import -> . IMPORT STRING
    (23) datatype -> . nullable_datatype
    (24) datatype -> . non_nullable_datatype
    (25) datatype -> . recordTypes
    (50) prototype -> . FUNC_START values RPAREN
    (51) prototype -> . FUNC_START RPAREN
    (22) nullable_datatype -> . non_nullable_datatype ACCEPT_NULL
    (11) non_nullable_datatype -> . INT_TYPE
    (12) non_nullable_datatype -> . DOUBLE_TYPE
    (13) non_nullable_datatype -> . NUM_TYPE
    (14) non_nullable_datatype -> . BOOL_TYPE
    (15) non_nullable_datatype -> . STRING_TYPE
    (16) non_nullable_datatype -> . LIST_TYPE
    (17) non_nullable_datatype -> . MAP_TYPE
    (18) non_nullable_datatype -> . SET_TYPE
    (19) non_nullable_datatype -> . RUNES_TYPE
    (20) non_nullable_datatype -> . SYMBOL_TYPE
    (21) non_nullable_datatype -> . VAR_TYPE
    (89) recordTypes -> . LPAREN multipleDatatypes RPAREN
    (90) recordTypes -> . LPAREN parameters RPAREN
    (91) recordTypes -> . LPAREN LBRACE recordTypeAnnotation RBRACE RPAREN

    VARIABLE        shift and go to state 12
    IMPORT          shift and go to state 13
    FUNC_START      shift and go to state 10
    INT_TYPE        shift and go to state 17
    DOUBLE_TYPE     shift and go to state 18
    NUM_TYPE        shift and go to state 19
    BOOL_TYPE       shift and go to state 20
    STRING_TYPE     shift and go to state 21
    LIST_TYPE       shift and go to state 22
    MAP_TYPE        shift and go to state 23
    SET_TYPE        shift and go to state 24
    RUNES_TYPE      shift and go to state 25
    SYMBOL_TYPE     shift and go to state 26
    VAR_TYPE        shift and go to state 27
    LPAREN          shift and go to state 28

    body                           shift and go to state 1
    instruction                    shift and go to state 2
    functionDeclaration            shift and go to state 3
    functionCall                   shift and go to state 4
    variableDeclarationUninitialized shift and go to state 5
    variableDeclarationInitialized shift and go to state 6
    variableMutation               shift and go to state 7
    import                         shift and go to state 8
    datatype                       shift and go to state 9
    prototype                      shift and go to state 11
    nullable_datatype              shift and go to state 14
    non_nullable_datatype          shift and go to state 15
    recordTypes                    shift and go to state 16

state 1

    (0) S' -> body .



state 2

    (1) body -> instruction . SEMICOLON body
    (2) body -> instruction . SEMICOLON

    SEMICOLON       shift and go to state 29


state 3

    (3) body -> functionDeclaration . body
    (4) body -> functionDeclaration .
    (1) body -> . instruction SEMICOLON body
    (2) body -> . instruction SEMICOLON
    (3) body -> . functionDeclaration body
    (4) body -> . functionDeclaration
    (6) instruction -> . functionCall
    (7) instruction -> . variableDeclarationUninitialized
    (8) instruction -> . variableDeclarationInitialized
    (9) instruction -> . variableMutation
    (10) instruction -> . import
    (45) functionDeclaration -> . datatype FUNC_START parameters RPAREN LBRACE body RBRACE
    (43) functionCall -> . prototype
    (44) functionCall -> . VARIABLE DOT prototype
    (26) variableDeclarationUninitialized -> . datatype VARIABLE
    (29) variableDeclarationInitialized -> . variableDeclarationUninitialized variableInitialization
    (41) variableMutation -> . VARIABLE variableInitialization
    (42) variableMutation -> . VARIABLE immediateAssign value
    (5) import -> . IMPORT STRING
    (23) datatype -> . nullable_datatype
    (24) datatype -> . non_nullable_datatype
    (25) datatype -> . recordTypes
    (50) prototype -> . FUNC_START values RPAREN
    (51) prototype -> . FUNC_START RPAREN
    (22) nullable_datatype -> . non_nullable_datatype ACCEPT_NULL
    (11) non_nullable_datatype -> . INT_TYPE
    (12) non_nullable_datatype -> . DOUBLE_TYPE
    (13) non_nullable_datatype -> . NUM_TYPE
    (14) non_nullable_datatype -> . BOOL_TYPE
    (15) non_nullable_datatype -> . STRING_TYPE
    (16) non_nullable_datatype -> . LIST_TYPE
    (17) non_nullable_datatype -> . MAP_TYPE
    (18) non_nullable_datatype -> . SET_TYPE
    (19) non_nullable_datatype -> . RUNES_TYPE
    (20) non_nullable_datatype -> . SYMBOL_TYPE
    (21) non_nullable_datatype -> . VAR_TYPE
    (89) recordTypes -> . LPAREN multipleDatatypes RPAREN
    (90) recordTypes -> . LPAREN parameters RPAREN
    (91) recordTypes -> . LPAREN LBRACE recordTypeAnnotation RBRACE RPAREN

    $end            reduce using rule 4 (body -> functionDeclaration .)
    RBRACE          reduce using rule 4 (body -> functionDeclaration .)
    VARIABLE        shift and go to state 12
    IMPORT          shift and go to state 13
    FUNC_START      shift and go to state 10
    INT_TYPE        shift and go to state 17
    DOUBLE_TYPE     shift and go to state 18
    NUM_TYPE        shift and go to state 19
    BOOL_TYPE       shift and go to state 20
    STRING_TYPE     shift and go to state 21
    LIST_TYPE       shift and go to state 22
    MAP_TYPE        shift and go to state 23
    SET_TYPE        shift and go to state 24
    RUNES_TYPE      shift and go to state 25
    SYMBOL_TYPE     shift and go to state 26
    VAR_TYPE        shift and go to state 27
    LPAREN          shift and go to state 28

    functionDeclaration            shift and go to state 3
    body                           shift and go to state 30
    instruction                    shift and go to state 2
    functionCall                   shift and go to state 4
    variableDeclarationUninitialized shift and go to state 5
    variableDeclarationInitialized shift and go to state 6
    variableMutation               shift and go to state 7
    import                         shift and go to state 8
    datatype                       shift and go to state 9
    prototype                      shift and go to state 11
    nullable_datatype              shift and go to state 14
    non_nullable_datatype          shift and go to state 15
    recordTypes                    shift and go to state 16

state 4

    (6) instruction -> functionCall .

    SEMICOLON       reduce using rule 6 (instruction -> functionCall .)


state 5

    (7) instruction -> variableDeclarationUninitialized .
    (29) variableDeclarationInitialized -> variableDeclarationUninitialized . variableInitialization
    (27) variableInitialization -> . ASSIGN value
    (28) variableInitialization -> . ASSIGN functionCall

    SEMICOLON       reduce using rule 7 (instruction -> variableDeclarationUninitialized .)
    ASSIGN          shift and go to state 32

    variableInitialization         shift and go to state 31

state 6

    (8) instruction -> variableDeclarationInitialized .

    SEMICOLON       reduce using rule 8 (instruction -> variableDeclarationInitialized .)


state 7

    (9) instruction -> variableMutation .

    SEMICOLON       reduce using rule 9 (instruction -> variableMutation .)


state 8

    (10) instruction -> import .

    SEMICOLON       reduce using rule 10 (instruction -> import .)


state 9

    (45) functionDeclaration -> datatype . FUNC_START parameters RPAREN LBRACE body RBRACE
    (26) variableDeclarationUninitialized -> datatype . VARIABLE

    FUNC_START      shift and go to state 33
    VARIABLE        shift and go to state 34


state 10

    (50) prototype -> FUNC_START . values RPAREN
    (51) prototype -> FUNC_START . RPAREN
    (48) values -> . value COMMA values
    (49) values -> . value
    (67) value -> . number
    (68) value -> . MINUS number
    (69) value -> . object
    (70) value -> . arithmeticExpression
    (71) value -> . MINUS LPAREN arithmeticExpression RPAREN
    (72) value -> . bitwiseExpression
    (73) value -> . MINUS LPAREN bitwiseExpression RPAREN
    (74) value -> . logicExpression
    (75) value -> . NOT LPAREN logicExpression RPAREN
    (76) value -> . STRING
    (77) value -> . VARIABLE
    (78) value -> . NOT VARIABLE
    (79) value -> . boolean
    (80) value -> . NOT boolean
    (81) value -> . variableValuePair
    (82) value -> . tuple
    (55) number -> . INTEGER
    (56) number -> . DOUBLE
    (52) object -> . NEW prototype
    (85) arithmeticExpression -> . value arithmeticOperator value
    (86) arithmeticExpression -> . LPAREN value arithmeticOperator value RPAREN
    (87) bitwiseExpression -> . value bitwiseOperator value
    (88) bitwiseExpression -> . LPAREN value bitwiseOperator value RPAREN
    (83) logicExpression -> . value logicOperator value
    (84) logicExpression -> . LPAREN value logicOperator value RPAREN
    (53) boolean -> . TRUE
    (54) boolean -> . FALSE
    (96) variableValuePair -> . VARIABLE COLON value
    (97) tuple -> . LPAREN values RPAREN

    RPAREN          shift and go to state 36
    MINUS           shift and go to state 39
    NOT             shift and go to state 45
    STRING          shift and go to state 46
    VARIABLE        shift and go to state 47
    INTEGER         shift and go to state 51
    DOUBLE          shift and go to state 52
    NEW             shift and go to state 53
    LPAREN          shift and go to state 42
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55

    values                         shift and go to state 35
    value                          shift and go to state 37
    number                         shift and go to state 38
    object                         shift and go to state 40
    arithmeticExpression           shift and go to state 41
    bitwiseExpression              shift and go to state 43
    logicExpression                shift and go to state 44
    boolean                        shift and go to state 48
    variableValuePair              shift and go to state 49
    tuple                          shift and go to state 50

state 11

    (43) functionCall -> prototype .

    SEMICOLON       reduce using rule 43 (functionCall -> prototype .)


state 12

    (44) functionCall -> VARIABLE . DOT prototype
    (41) variableMutation -> VARIABLE . variableInitialization
    (42) variableMutation -> VARIABLE . immediateAssign value
    (27) variableInitialization -> . ASSIGN value
    (28) variableInitialization -> . ASSIGN functionCall
    (30) immediateAssign -> . SUM_ASSIGN
    (31) immediateAssign -> . SUB_ASSIGN
    (32) immediateAssign -> . MUL_ASSIGN
    (33) immediateAssign -> . DIV_ASSIGN
    (34) immediateAssign -> . MOD_ASSIGN
    (35) immediateAssign -> . AND_ASSIGN
    (36) immediateAssign -> . OR_ASSIGN
    (37) immediateAssign -> . XOR_ASSIGN
    (38) immediateAssign -> . LSHIFT_ASSIGN
    (39) immediateAssign -> . RSHIFT_ASSIGN
    (40) immediateAssign -> . RUNSIGNED_SHIFT_ASSIGN
